--- a/xazh/src/style.less
+++ b/xazh/src/style.less
@@ -1,9 +1,15 @@
+:root {
+  --headerHeight: 64px;
+}
+
 * {
   margin: 0;
   padding: 0;
 }
 
-*::selection {}
+*::selection {
+  background-color: var(--colorPrimary);
+}
 
 html {
   margin: auto;
