--- a/xazh/src/style.less
+++ b/xazh/src/style.less
@@ -53,3 +53,15 @@ a {
 .ant-avatar {
   background: var(--colorPrimary);
 }
+
+// Transition
+.slide-enter-active,
+.slide-leave-active {
+  transition: opacity .2s, transform .2s;
+}
+
+.slide-enter-from,
+.slide-leave-to {
+  opacity: 0;
+  transform: translateY(20%);
+}
