--- a/xazh/src/assets/css/style.less
+++ b/xazh/src/assets/css/style.less
@@ -32,3 +32,18 @@ a {
     color: var(--colorPrimary);
   }
 }
+
+// Custiom scrollbar
+::-webkit-scrollbar {
+  width: .4rem;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--colorBorder);
+  border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:hover {
+  width: .4rem;
+}
