modified:   xazh-back/src/controller/file.controller.ts 	new file:   xazh/public/lottie/403.json 	new file:   xazh/public/lottie/404.json 	modified:   xazh/src/api/base.user.api.ts 	modified:   xazh/src/api/file.api.ts 	modified:   xazh/src/assets/css/ctlpanel.less 	modified:   xazh/src/components/common/Lottie.vue 	deleted:    xazh/src/components/common/PicListAndUpload.vue 	modified:   xazh/src/components/upload/UploadPicList.vue 	new file:   xazh/src/pages/error/403.vue 	new file:   xazh/src/pages/error/404.vue 	modified:   xazh/src/pages/panel/webpanel/blogoptions.vue 	new file:   xazh/src/router/error.ts 	modified:   xazh/src/router/index.ts 	modified:   xazh/src/router/webpanel.ts

--- a/xazh/src/assets/css/ctlpanel.less
+++ b/xazh/src/assets/css/ctlpanel.less
@@ -15,3 +15,25 @@ section {
     z-index: 9;
   }
 }
+
+.tags-container {
+  padding: 1rem;
+  margin: 2rem;
+  margin-top: 0;
+  border: 1px solid var(--colorBorder);
+  border-radius: var(--borderRadius);
+}
+
+.tags-item {
+  padding: .2rem .4rem;
+  margin-right: 1rem;
+  cursor: move;
+  color: inherit;
+  display: block !important;
+}
+
+.tags-add {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: end;
+}
