--- a/xazh/src/assets/css/style.less
+++ b/xazh/src/assets/css/style.less
@@ -36,6 +36,7 @@ a {
 // Custiom scrollbar
 ::-webkit-scrollbar {
   width: .4rem;
+  height: .4rem;
 }
 ::-webkit-scrollbar-track {
   background-color: transparent;
