--- a/xazh/src/assets/css/style.less
+++ b/xazh/src/assets/css/style.less
@@ -37,6 +37,7 @@ a {
 ::-webkit-scrollbar {
   width: .4rem;
   height: .4rem;
+  background-color: var(--colorBgLayout);
 }
 ::-webkit-scrollbar-track {
   background-color: transparent;
