Changes to be committed: 	modified:   xazh-back/src/controller/blog.controller.ts 	modified:   xazh-back/src/dto/blog.dto.ts 	modified:   xazh-back/src/service/base.user.service.ts 	modified:   xazh-back/src/service/blog.user.service.ts 	modified:   xazh-back/src/util/mongod.util.ts 	modified:   xazh/package-lock.json 	modified:   xazh/package.json 	new file:   xazh/src/@types/vLazyComponent.d.ts 	modified:   xazh/src/api/blog.api.ts 	modified:   xazh/src/assets/css/style.less 	modified:   xazh/src/components.d.ts 	new file:   xazh/src/components/common/BlogViewCard.vue 	new file:   xazh/src/components/common/BlogViewList.vue 	modified:   xazh/src/components/common/Editor.vue 	modified:   xazh/src/components/upload/UploadPic.vue 	modified:   xazh/src/main.ts 	modified:   xazh/src/pages/func/EditBlog.vue 	modified:   xazh/src/pages/func/SelfHome.vue 	modified:   xazh/src/pages/func/ShowBlog.vue 	modified:   xazh/src/router/index.ts 	modified:   xazh/src/store/config.store.ts 	modified:   xazh/src/types/blog.type.ts 	modified:   xazh/vite.config.ts

--- a/xazh/src/assets/css/style.less
+++ b/xazh/src/assets/css/style.less
@@ -35,8 +35,8 @@ a {
 
 // Custiom scrollbar
 ::-webkit-scrollbar {
-  width: .4rem;
-  height: .4rem;
+  width: 0.4rem;
+  height: 0.4rem;
   background-color: var(--colorBgLayout);
 }
 ::-webkit-scrollbar-track {
@@ -47,5 +47,38 @@ a {
   border-radius: 6px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  width: .4rem;
+  width: 0.4rem;
+}
+
+/**
+   * Following block of code is loading effect of text flow.
+  */
+.loading {
+  border-radius: var(--borderRadius);
+  background-color: var(--colorBgLayout);
+  overflow: hidden;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.loading::after {
+  content: '';
+  display: block;
+  width: 100px;
+  height: 100%;
+  background-color: var(--colorBgContainer);
+  box-shadow: 0 0 64px 64px var(--colorBgContainer);
+  transform: skewX(-30deg);
+  animation: bright 2s linear infinite;
+}
+
+@keyframes bright {
+  from {
+    margin-left: -100px;
+  }
+
+  to {
+    margin-left: calc(100% + 100px);
+  }
 }
